# board-governance-extractor

./: .env.example  CLAUDE.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  config.yaml  pyproject.toml
data/: LBG_Board_Governance_2025.xlsx  LBG_Board_Governance_2025_Extracted.xlsx  lbg_extracted_mock.json  lbg_ground_truth.json
examples/: run_lbg.sh
outputs/: AstraZeneca_2025_Board_Governance-gt.xlsx  AstraZeneca_2025_Board_Governance.json  LloydsBankingGroup_2025_Board_Governance-c1_r1.json  LloydsBankingGroup_2025_Board_Governance-c1_r1.xlsx  LloydsBankingGroup_2025_Board_Governance-c1_r2.json  LloydsBankingGroup_2025_Board_Governance-c1_r2.xlsx  LloydsBankingGroup_2025_Board_Governance-c23_r1.json  LloydsBankingGroup_2025_Board_Governance-c23_r2.json  LloydsBankingGroup_2025_Board_Governance-c23_r2.xlsx  LloydsBankingGroup_2025_Board_Governance_c23_r1.xlsx  LloydsBankingGroup_2025_Board_Governance_deepseek.json  LloydsBankingGroup_2025_Board_Governance_deepseek.xlsx  LloydsBankingGroup_2025_Board_Governance_openai.json  LloydsBankingGroup_2025_Board_Governance_openai.xlsx  LloydsBankingGroup_2025_Board_Governance_round1-c1.md  LloydsBankingGroup_2025_Board_Governance_round1-c23.md  evaluation_report.json  evaluation_report.xlsx
outputs/lbg-2025/: LloydsBankingGroup_2025_Board_Governance.json  LloydsBankingGroup_2025_Board_Governance.xlsx
schemas/: board_governance.schema.json
src/gov_extract/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/fixtures/: lbg_ground_truth.json
tests/integration/: test_extraction_anthropic.py
(+36 files in other folders)
