[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "board-governance-extractor"
version = "0.1.0"
description = "Extract structured board governance data from PDF filings using LLMs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.13",
    "pdfminer.six>=20231228",
    "openpyxl>=3.1",
    "jsonschema>=4.23",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
eval = [
    "sentence-transformers>=3.0",
    "rapidfuzz>=3.9",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.23",
]

[project.scripts]
gov-extract = "gov_extract.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gov_extract"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/gov_extract"]
